# $Id$

2007-10-20	Konstantin V. Arkhipov

	* 0.10.7 released.

2007-10-16	Konstantin V. Arkhipov

	* main/DAOs/Handlers/FileSystemSegmentHandler.class.php: drop() now
	uses FileUtils' removeDirectory.

	* main/DAOs/Workers/TransparentDaoWorker.class.php,
	main/DAOs/Handlers/: no more hardcoded precision, platform-dependent
	computation implemented.

2007-10-14	Konstantin V. Arkhipov

	* 0.10.6 released.

2007-10-11	Ivan Y. Khvostishkov

	* main/Net/GenericUri.class.php: toStringFromRoot() - url without
	scheme and authority part.

2007-10-10	Denis M. Gabaidulin

	* core/Date.class.php: makeFromWeek() constructor was added.

	* core/OSQL/DatePart.class.php, ExtractPart.class.php: copied from
	trunk.

2007-10-09	Ivan Y. Khvostishkov

	* core/Base/Assert.class.php: arguments are visible now, yeah!

2007-10-06	Konstantin V. Arkhipov

	* main/Net/Http/CurlHttpClient.class.php: user-agent added; parasitic
	question mark removed.

2007-10-02	Ivan Y. Khvostishkov

	* main/Utils/TextUtils.class.php: added friendlyNumber() for
	typographing integer numbers.

2007-10-01	Dmitry E. Demidov

	* main/Criteria/Projections/HavingProjection.class.php,
	main/Criteria/Projection.class.php: added HavingProjection.

2007-10-01	Dmitry E. Pismenny

	* core/Form/Form.class.php: added isImported check in importMore
	functions.
	
	* main/Flow/View.class.php: added ERROR_VIEW const.

2007-09-26	Dmitry A. Lomash

	* main/Criteria/Projections/GroupByClassProjection.class.php: added.

2007-09-26	Konstantin V. Arkhipov

	* main/Base/DateRange.class.php: now implements SingleRange.

2007-09-25	Dmitry E. Demidov

	* core/OSQL/FieldTable.class.php: getField() added.

	* core/OSQL/OrderBy.class.php: isAsc(), invert(), __clone() added.

2007-09-25	Vladimir A. Altuchov

	* main/Net/Ip/: Ip classes added.

	* main/Base/SingleRange.class.php: range interface added.

2007-09-19	Konstantin V. Arkhipov

	* main/DAOs/Workers/: uncaching fixed in dropByIds().
